Punto 6 Barra de Progreso Terminado

--- a/TP4/Punto 6-Barra de Progreso/css/ej6.style.css
+++ b/TP4/Punto 6-Barra de Progreso/css/ej6.style.css
@@ -84,8 +84,10 @@ ul {
 
 /*---Scrolling Promos---*/
 .scrollProm {    
-    padding: 40px;
-    margin: 35px;
+    padding-left : 40px;
+    padding-bottom: 40px;
+    margin-left: 35px;
+    margin-bottom: 40px;
     align-self: center;
     width: 90%;
     height: 280px;
@@ -317,7 +319,7 @@ footer {
 .visible{
     animation-name: izquierda;
     position: relative;
-    margin: auto;
+    
     opacity: 1;
     padding-left: 2%;
     width: 95%;
